# hpp-flecto

./: CMakeLists.txt  README.md
include/hpp/flecto/: flexible-validation.hh
src/: CMakeLists.txt  flexible-validation.cc
